testsuite/tests/grammar/invalid_lexers/spacing_1.lkt
import common

lexer foo_lexer {
    @unparsing_spacing() family ids {
        example <- "example"
    }
}
